# gentab

./: .buildinfo  .gitignore  DCR.py  Fidelity.py  README.md  correlation.py  dcr.py  environment.yaml  fidelity.py  genindex.html  index.html  objects.inv  performance.py  pyproject.toml  results.py  search.html  searchindex.js  test.py  test_adult_baseline.py  test_adult_baseline_correlation.py  test_adult_catboost.py  test_adult_knn.py  test_adult_lightgbm.py  test_adult_xgboost.py  test_baseline.py  test_baseline_correlation.py  test_car_eval_4_baseline.py  test_car_eval_4_mlp.py  test_car_evaluation_KNN_tuning.py  test_car_evaluation_baseline.py  test_car_evaluation_baseline_correlation.py  test_car_evaluation_knn.py  test_congressional_baseline.py  test_ecoli_baseline.py  test_housing_baseline_correlation.py  test_mammography_baseline.py  test_playnet_baseline.py  test_playnet_lightgbm.py  test_playnet_mlp.py  test_protein_homo_baseline.py  (+6 more)
.doctrees/: environment.pickle  index.doctree
API/: index.html
Install/: index.html
Nutshell/: index.html
Out-of-the-box/: index.html
_sources/: index.rst.txt
_static/: alabaster.css
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
configs/: adult.json  adult_cr.json  adult_lightgbm.json  california_housing.json  california_housing_cr.json  car_eval_4.json  car_evaluation.json  car_evaluation_cr.json  car_evaluation_knn.json  ecoli.json  ecoli_cr.json  mushroom.json  mushroom_cr.json  oil.json  oil_cr.json  playnet.json  playnet_cr.json  protein_homo.json  sick.json  sick_cr.json
gentab/: __init__.py  utils.py
statistics/: dataset_info.py  dcr.py  fidelity.py  ml_utility.py  ml_utility_analysis.py  performance.py  privacy.py  results.py
synthtab/: __init__.py  _tabddpm.py  algorithm.py  console.py  progress.py  utils.py
tabgen/: __init__.py
tests/: test_adult_baseline.py  test_adult_baseline_correlation.py  test_adult_catboost.py  test_adult_lightgbm.py  test_adult_mlp.py  test_adult_svm.py  test_adult_xgboost.py  test_car_eval_4_baseline.py  test_car_eval_4_catboost.py  test_car_eval_4_lightgbm.py  test_car_eval_4_mlp.py  test_car_eval_4_svm.py  test_car_eval_4_xgboost.py  test_car_evaluation_baseline_correlation.py  test_ecoli_baseline.py  test_ecoli_baseline_correlation.py  test_ecoli_catboost.py  test_ecoli_lightgbm.py  test_ecoli_mlp.py  test_ecoli_svm.py  test_ecoli_xgboost.py  test_housing_baseline.py  test_housing_baseline_correlation.py  test_housing_catboost.py  test_housing_lightgbm.py  test_housing_mlp.py  test_housing_svm.py  test_housing_xgboost.py  test_mushroom_baseline.py  test_mushroom_baseline_correlation.py  test_mushroom_catboost.py  test_mushroom_lightgbm.py  test_mushroom_mlp.py  test_mushroom_svm.py  test_mushroom_xgboost.py  test_oil_baseline.py  test_oil_catboost.py  test_oil_lightgbm.py  (+18 more)
(+171 files in other folders)
