[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthtab"
version = "0.0.1"
authors = [
  { name="Omar A. Mures", email="omar.alvarez@udc.es" },
]
description = "A synthetic tabular data augmentation library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/omaralvarez/synthtab"
Issues = "https://github.com/omaralvarez/synthtab/issues"