[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gentab"
version = "0.1.0"
authors = [
  { name="Omar A. Mures", email="omar.alvarez@udc.es" },
]
description = "A synthetic tabular data generation library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["tabular", "synthetic", "generation"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
]

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Homepage = "https://github.com/omaralvarez/gentab"
Issues = "https://github.com/omaralvarez/gentab/issues"