[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gentab"
version = "0.1.2"
authors = [
  { name="Omar A. Mures", email="omar.alvarez@udc.es" },
]
description = "A synthetic tabular data generation library."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [
    "tabular",
    "synthetic",
    "generation",
    "data",
    "deep learning",
    "machine learning"
]
dependencies = [
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchmetrics==1.2.1",
    "torchvision==0.15.2",
    "pandas==2.1.3",
    "rich==13.1.0",
    "optuna==3.5.0",
    "scikit-learn==1.3.2",
    "category_encoders==2.6.3",
    "imbalanced-learn==0.11.0",
    "sdv==1.8.0",
    "ForestDiffusion==1.0.5",
    "transformers==4.38.2",
    "datasets==2.15.0",
    "be-great==0.0.7",
    "lightning==2.1.2",
    "ucimlrepo==0.0.3",
    "humanize==4.9.0",
    "dask==2024.1.1",
    "dython==0.7.5",
    "skorch==0.15.0",
]

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Homepage = "https://github.com/omaralvarez/gentab"
Issues = "https://github.com/omaralvarez/gentab/issues"